# tutomate

./: .gitignore  CHANGELOG.md  FEATURE_ROADMAP.md  TODO.md  UPDATE_SETUP.md  VERSION_MANAGEMENT.md  data-lifecycle.html  data-lifecycle.mermaid  electron-builder-q.yml  electron-builder.yml  full_replace.sql  monthly_payments_insert.sql  monthly_payments_mapped_insert.sql  monthly_payments_name_mapped.sql  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  test-migration.mjs  vite.config.ts  vitest.config.ts  vitest.workspace.ts  사용설명서.md
.davinci/: doc-sync.json
.husky/: pre-commit
docs/: 2026-03-31-040141-this-session-is-being-continued-from-a-previous-co.txt  ADR-001-auth-initialization-background-migration.md  ADR-002-social-oauth-login.md  MIGRATION-local-llm-to-openrouter.md  PLAN-audit-log.md  PLAN-bank-match-quickwins-2026-07-18.md  PLAN-theme-expansion.md  REQUIREMENTS-audit-log.md  RISKS-audit-log.md  features.md  monorepo.md  test-plan.md  theme-preview.html  user-auth-flow.md
e2e/: debug-console.test.ts  electron.test.ts  member-feature.test.ts  playwright.config.ts  quarter-feature.test.ts  screenshots.test.ts  setup.ts
electron/: main.ts  preload.ts  updater.ts
scripts/: .env.admin.example  fetch-llama-server.sh  fetch-vc-redist.sh  generate-import-template.ts  generate-key.js  release-win.sh  release.sh
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
supabase/: config.toml  seed.sql
(+253 files in other folders)
