[package]
name = "app"
version = "0.2.6"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9", features = [] }
tauri-plugin-log = "2.8"
tauri-plugin-fs = "2.4"
tauri-plugin-updater = "2.9"
tauri-plugin-process = "2.2"
tauri-plugin-dialog = "2"
zip = "2.2"
chrono = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[profile.release]
lto = "thin"
codegen-units = 16
opt-level = "s"
strip = true
panic = "abort"

[profile.release.build-override]
opt-level = 3
